--- a/CyberLogin/pom.xml
+++ b/CyberLogin/pom.xml
@@ -17,5 +17,17 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>8.4.0</version>
         </dependency>
+     
+       <dependency>
+         <groupId>com.actionjava</groupId>
+         <artifactId>aj-core</artifactId>
+         <version>0.0.1</version>
+       </dependency>
+     
+       <dependency>
+         <groupId>com.google.android</groupId>
+         <artifactId>android</artifactId>
+         <version>4.1.1.4</version>
+       </dependency>
      </dependencies>
 </project>
